# SCCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  build.py  build.sh  check.sh  cpplint.py  generate_parser.py  generate_parser.sh  show_ast.sh  show_dot.py  show_dot.sh  show_ptree.py  show_ptree.sh
Compiler.xcworkspace/: contents.xcworkspacedata
DemoCompiler/: generate_parser.sh  show_ast.sh
DemoCompiler/Apps/DemoCompilerApp/: DemoCompilerTestCode.src  ParseTreeListener.cpp  ParseTreeListener.hpp  ParseTreeVisitor.cpp  ParseTreeVisitor.hpp  main.cpp
DemoCompiler/Apps/DemoCompilerTestApp/: main.cpp
DemoCompiler/Apps/DemoCompilerTestApp/UnitTests/: LexerTests.cpp  LexerTests.hpp
DemoCompiler/Common/Parser/: DemoCompiler.g4  DemoCompiler.interp  DemoCompiler.tokens  DemoCompilerBaseListener.cpp  DemoCompilerBaseListener.h  DemoCompilerBaseVisitor.cpp  DemoCompilerBaseVisitor.h  DemoCompilerLexer.cpp  DemoCompilerLexer.h  DemoCompilerLexer.interp  DemoCompilerListener.cpp  DemoCompilerListener.h  DemoCompilerParser.cpp  DemoCompilerParser.h  DemoCompilerVisitor.cpp  DemoCompilerVisitor.h
DemoCompiler/DemoCompiler.xcodeproj/: project.pbxproj
SCCompiler/: build.sh  generate_parser.sh  show_ast.sh  show_dot.sh  show_ptree.sh
SCCompiler/Apps/SCCompilerApp/: CMakeLists.txt  MyVisitor.cpp  MyVisitor.hpp  SCCompilerTestCode.src  main.cpp
SCCompiler/Apps/SCCompilerTestApp/: CMakeLists.txt  CodeGenerationTests.cpp  SyntaxTests.cpp  main.cpp
SCCompiler/Apps/SCCompilerTestApp/UnitTests/: CodeGenerationTests.cpp  CodeGenerationTests.hpp  LexerTests.cpp  LexerTests.hpp  SemanticTests.cpp  SemanticTests.hpp  SyntaxTests.cpp  SyntaxTests.hpp
SCCompiler/Common/Compiler/Parser/: SCCompiler.interp  SCCompilerBaseListener.cpp  SCCompilerBaseListener.h  SCCompilerBaseVisitor.cpp  SCCompilerBaseVisitor.h  SCCompilerLexer.cpp  SCCompilerLexer.h  SCCompilerLexer.tokens  SCCompilerListener.cpp  SCCompilerListener.h  SCCompilerParser.cpp  SCCompilerParser.h  SCCompilerVisitor.cpp  SCCompilerVisitor.h
SCCompiler/Common/SCCompiler/: AST.cpp  AST.hpp  ASTGenerator.cpp  ASTGenerator.hpp  ASTVisualizer.cpp  ASTVisualizer.hpp  CodeGenPass.cpp  CodeGenPass.hpp  Compiler.cpp  Compiler.hpp  Exceptions.cpp  Exceptions.hpp  JITEngine.cpp  JITEngine.hpp  SCCompiler.cpp  SCCompiler.hpp  SCModule.cpp  SCModule.hpp  SemanticPass.cpp  SemanticPass.hpp  SymbolDefPass.cpp  SymbolDefPass.hpp  Symbols.cpp  Symbols.hpp  Types.cpp  Types.hpp
SCCompiler/Common/SCCompiler/Parser/: SCCompiler.g4  SCCompiler.interp  SCCompiler.tokens  SCCompilerBaseListener.cpp  SCCompilerBaseListener.h  SCCompilerBaseVisitor.cpp  SCCompilerBaseVisitor.h  SCCompilerLexer.cpp  SCCompilerLexer.h  SCCompilerLexer.interp  SCCompilerLexer.tokens  SCCompilerListener.cpp  SCCompilerListener.h  SCCompilerParser.cpp  SCCompilerParser.h  SCCompilerVisitor.cpp  SCCompilerVisitor.h
SCCompiler/SCCompiler.xcodeproj/: project.pbxproj
SCCompiler/SCCompiler.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Targets/SCCompilerApp/: CMakeLists.txt  main.cpp
Targets/SCCompilerExamples/SCCompilerApp/: CMakeLists.txt  SCCompilerTestCode.src  main.cpp
Targets/SCCompilerLib/: AST.cpp  AST.hpp  ASTGenerator.cpp  ASTGenerator.hpp  ASTVisualizer.cpp  ASTVisualizer.hpp  CMakeLists.txt  CodeGenPass.cpp  CodeGenPass.hpp  Compiler.cpp  Compiler.hpp  Exceptions.cpp  Exceptions.hpp  JITEngine.cpp  JITEngine.hpp  SCCompiler.cpp  SCCompiler.hpp  SCModule.cpp  SCModule.hpp  SemanticPass.cpp  SemanticPass.hpp  SymbolDefPass.cpp  SymbolDefPass.hpp  Symbols.cpp  Symbols.hpp  Types.cpp  Types.hpp  Utils.hpp
Targets/SCCompilerLib/Parser/: SCCompiler.g4  SCCompiler.interp  SCCompiler.tokens  SCCompilerBaseListener.cpp  SCCompilerBaseListener.h  SCCompilerBaseVisitor.cpp  SCCompilerBaseVisitor.h  SCCompilerLexer.cpp  SCCompilerLexer.h  SCCompilerLexer.interp  SCCompilerListener.cpp  SCCompilerListener.h  SCCompilerParser.cpp  SCCompilerParser.h  SCCompilerVisitor.cpp  SCCompilerVisitor.h
Targets/SCCompilerTestApp/: CMakeLists.txt  CodeGenerationTests.cpp  SemanticTests.cpp  SyntaxTests.cpp  TestUtils.cpp  TestUtils.hpp  main.cpp
Targets/SCCompilerTests/: CMakeLists.txt  CodeGenerationTests.cpp  SemanticTests.cpp  SyntaxTests.cpp  TestUtils.cpp  TestUtils.hpp  main.cpp
