#
#  Copyright © 2018-Present, Arkin Terli. All rights reserved.
#

add_library(SCCompilerLib
        AST.cpp
        ASTGenerator.cpp
        ASTVisualizer.cpp
        CodeGenPass.cpp
        Compiler.cpp
        Exceptions.cpp
        JITEngine.cpp
        SemanticPass.cpp
        SCCompiler.cpp
        SCModule.cpp
        Symbols.cpp
        SymbolDefPass.cpp
        Types.cpp
        Parser/SCCompilerBaseListener.cpp
        Parser/SCCompilerBaseVisitor.cpp
        Parser/SCCompilerLexer.cpp
        Parser/SCCompilerListener.cpp
        Parser/SCCompilerParser.cpp
        Parser/SCCompilerVisitor.cpp
        )

# Run installed/./llvm-config --libs to dump list of libs to include here and keep the original order of the libs.
target_link_libraries(SCCompilerLib PRIVATE
        antlr4-runtime_s
        z
        pthread
        edit
        curses
        dl
        m
        LLVMXRay
        LLVMWindowsManifest
        LLVMTableGen
        LLVMSymbolize
        LLVMDebugInfoPDB
        LLVMOrcJIT
        LLVMOrcError
        LLVMJITLink
        LLVMObjectYAML
        LLVMMCA
        LLVMLTO
        LLVMPasses
        LLVMObjCARCOpts
        LLVMLineEditor
        LLVMLibDriver
        LLVMInterpreter
        LLVMFuzzMutate
        LLVMFrontendOpenMP
        LLVMMCJIT
        LLVMExecutionEngine
        LLVMRuntimeDyld
        LLVMDWARFLinker
        LLVMDlltoolDriver
        LLVMOption
        LLVMDebugInfoGSYM
        LLVMCoverage
        LLVMCoroutines
        LLVMXCoreDisassembler
        LLVMXCoreCodeGen
        LLVMXCoreDesc
        LLVMXCoreInfo
        LLVMX86Disassembler
        LLVMX86AsmParser
        LLVMX86CodeGen
        LLVMX86Desc
        LLVMX86Utils
        LLVMX86Info
        LLVMWebAssemblyDisassembler
        LLVMWebAssemblyCodeGen
        LLVMWebAssemblyDesc
        LLVMWebAssemblyAsmParser
        LLVMWebAssemblyInfo
        LLVMSystemZDisassembler
        LLVMSystemZCodeGen
        LLVMSystemZAsmParser
        LLVMSystemZDesc
        LLVMSystemZInfo
        LLVMSparcDisassembler
        LLVMSparcCodeGen
        LLVMSparcAsmParser
        LLVMSparcDesc
        LLVMSparcInfo
        LLVMRISCVDisassembler
        LLVMRISCVCodeGen
        LLVMRISCVAsmParser
        LLVMRISCVDesc
        LLVMRISCVUtils
        LLVMRISCVInfo
        LLVMPowerPCDisassembler
        LLVMPowerPCCodeGen
        LLVMPowerPCAsmParser
        LLVMPowerPCDesc
        LLVMPowerPCInfo
        LLVMNVPTXCodeGen
        LLVMNVPTXDesc
        LLVMNVPTXInfo
        LLVMMSP430Disassembler
        LLVMMSP430CodeGen
        LLVMMSP430AsmParser
        LLVMMSP430Desc
        LLVMMSP430Info
        LLVMMipsDisassembler
        LLVMMipsCodeGen
        LLVMMipsAsmParser
        LLVMMipsDesc
        LLVMMipsInfo
        LLVMLanaiDisassembler
        LLVMLanaiCodeGen
        LLVMLanaiAsmParser
        LLVMLanaiDesc
        LLVMLanaiInfo
        LLVMHexagonDisassembler
        LLVMHexagonCodeGen
        LLVMHexagonAsmParser
        LLVMHexagonDesc
        LLVMHexagonInfo
        LLVMBPFDisassembler
        LLVMBPFCodeGen
        LLVMBPFAsmParser
        LLVMBPFDesc
        LLVMBPFInfo
        LLVMARMDisassembler
        LLVMARMCodeGen
        LLVMARMAsmParser
        LLVMARMDesc
        LLVMARMUtils
        LLVMARMInfo
        LLVMAMDGPUDisassembler
        LLVMAMDGPUCodeGen
        LLVMMIRParser
        LLVMipo
        LLVMInstrumentation
        LLVMVectorize
        LLVMLinker
        LLVMIRReader
        LLVMAsmParser
        LLVMAMDGPUAsmParser
        LLVMAMDGPUDesc
        LLVMAMDGPUUtils
        LLVMAMDGPUInfo
        LLVMAArch64Disassembler
        LLVMMCDisassembler
        LLVMAArch64CodeGen
        LLVMCFGuard
        LLVMGlobalISel
        LLVMSelectionDAG
        LLVMAsmPrinter
        LLVMDebugInfoDWARF
        LLVMCodeGen
        LLVMTarget
        LLVMScalarOpts
        LLVMInstCombine
        LLVMAggressiveInstCombine
        LLVMTransformUtils
        LLVMBitWriter
        LLVMAnalysis
        LLVMProfileData
        LLVMObject
        LLVMTextAPI
        LLVMBitReader
        LLVMCore
        LLVMRemarks
        LLVMBitstreamReader
        LLVMAArch64AsmParser
        LLVMMCParser
        LLVMAArch64Desc
        LLVMMC
        LLVMDebugInfoCodeView
        LLVMDebugInfoMSF
        LLVMBinaryFormat
        LLVMAArch64Utils
        LLVMAArch64Info
        LLVMSupport
        LLVMDemangle
        )

# Note: files in Output section needs to be generated in target binary. Otherwise, it will generate files in every build run.
#add_custom_command(
#        OUTPUT Parser/SCCompilerBaseListener.cpp Parser/SCCompilerBaseVisitor.cpp Parser/SCCompilerLexer.cpp Parser/SCCompilerListener.cpp Parser/SCCompilerParser.cpp Parser/SCCompilerVisitor.cpp
#        COMMAND "java -jar \"Externals/ANTLR/4.7.1/Tool/antlr-4.7.1-complete.jar\" -Dlanguage=Cpp -visitor ./Targets/SCCompilerLib/Parser/SCCompiler.g4"
#        DEPENDS SCCompiler.g4
#        )
