add_executable(SCCompilerTestApp
        main.cpp
        SyntaxTests.cpp
        SemanticTests.cpp
        CodeGenerationTests.cpp
        TestUtils.cpp
        ../../Common/SCCompiler/Symbols.cpp
        ../../Common/SCCompiler/JITEngine.cpp
        ../../Common/SCCompiler/ASTGenerator.cpp
        ../../Common/SCCompiler/Exceptions.cpp
        ../../Common/SCCompiler/AST.cpp
        ../../Common/SCCompiler/Compiler.cpp
        ../../Common/SCCompiler/ASTVisualizer.cpp
        ../../Common/SCCompiler/CodeGenPass.cpp
        ../../Common/SCCompiler/SCCompiler.cpp
        ../../Common/SCCompiler/Types.cpp
        ../../Common/SCCompiler/SCModule.cpp
        ../../Common/SCCompiler/SemanticPass.cpp
        ../../Common/SCCompiler/SymbolDefPass.cpp
        ../../Common/SCCompiler/Parser/SCCompilerBaseListener.cpp
        ../../Common/SCCompiler/Parser/SCCompilerBaseVisitor.cpp
        ../../Common/SCCompiler/Parser/SCCompilerLexer.cpp
        ../../Common/SCCompiler/Parser/SCCompilerListener.cpp
        ../../Common/SCCompiler/Parser/SCCompilerParser.cpp
        ../../Common/SCCompiler/Parser/SCCompilerVisitor.cpp
        )

target_link_libraries(SCCompilerTestApp
        antlr4-runtime
        z
        pthread
        edit
        curses
        m
        LLVMLTO
        LLVMPasses
        LLVMObjCARCOpts
        LLVMMIRParser
        LLVMSymbolize
        LLVMDebugInfoPDB
        LLVMDebugInfoDWARF
        LLVMCoverage
        LLVMTableGen
        LLVMDlltoolDriver
        LLVMOrcJIT
        LLVMXCoreDisassembler
        LLVMXCoreCodeGen
        LLVMXCoreDesc
        LLVMXCoreInfo
        LLVMXCoreAsmPrinter
        LLVMSystemZDisassembler
        LLVMSystemZCodeGen
        LLVMSystemZAsmParser
        LLVMSystemZDesc
        LLVMSystemZInfo
        LLVMSystemZAsmPrinter
        LLVMSparcDisassembler
        LLVMSparcCodeGen
        LLVMSparcAsmParser
        LLVMSparcDesc
        LLVMSparcInfo
        LLVMSparcAsmPrinter
        LLVMPowerPCDisassembler
        LLVMPowerPCCodeGen
        LLVMPowerPCAsmParser
        LLVMPowerPCDesc
        LLVMPowerPCInfo
        LLVMPowerPCAsmPrinter
        LLVMNVPTXCodeGen
        LLVMNVPTXDesc
        LLVMNVPTXInfo
        LLVMNVPTXAsmPrinter
        LLVMMSP430CodeGen
        LLVMMSP430Desc
        LLVMMSP430Info
        LLVMMSP430AsmPrinter
        LLVMMipsDisassembler
        LLVMMipsCodeGen
        LLVMMipsAsmParser
        LLVMMipsDesc
        LLVMMipsInfo
        LLVMMipsAsmPrinter
        LLVMLanaiDisassembler
        LLVMLanaiCodeGen
        LLVMLanaiAsmParser
        LLVMLanaiDesc
        LLVMLanaiAsmPrinter
        LLVMLanaiInfo
        LLVMHexagonDisassembler
        LLVMHexagonCodeGen
        LLVMHexagonAsmParser
        LLVMHexagonDesc
        LLVMHexagonInfo
        LLVMBPFDisassembler
        LLVMBPFCodeGen
        LLVMBPFAsmParser
        LLVMBPFDesc
        LLVMBPFInfo
        LLVMBPFAsmPrinter
        LLVMARMDisassembler
        LLVMARMCodeGen
        LLVMARMAsmParser
        LLVMARMDesc
        LLVMARMInfo
        LLVMARMAsmPrinter
        LLVMARMUtils
        LLVMAMDGPUDisassembler
        LLVMAMDGPUCodeGen
        LLVMAMDGPUAsmParser
        LLVMAMDGPUDesc
        LLVMAMDGPUInfo
        LLVMAMDGPUAsmPrinter
        LLVMAMDGPUUtils
        LLVMAArch64Disassembler
        LLVMAArch64CodeGen
        LLVMAArch64AsmParser
        LLVMAArch64Desc
        LLVMAArch64Info
        LLVMAArch64AsmPrinter
        LLVMAArch64Utils
        LLVMObjectYAML
        LLVMLibDriver
        LLVMOption
        LLVMWindowsManifest
        LLVMFuzzMutate
        LLVMX86Disassembler
        LLVMX86AsmParser
        LLVMX86CodeGen
        LLVMGlobalISel
        LLVMSelectionDAG
        LLVMAsmPrinter
        LLVMDebugInfoCodeView
        LLVMDebugInfoMSF
        LLVMX86Desc
        LLVMMCDisassembler
        LLVMX86Info
        LLVMX86AsmPrinter
        LLVMX86Utils
        LLVMMCJIT
        LLVMLineEditor
        LLVMInterpreter
        LLVMExecutionEngine
        LLVMRuntimeDyld
        LLVMCodeGen
        LLVMTarget
        LLVMCoroutines
        LLVMipo
        LLVMInstrumentation
        LLVMVectorize
        LLVMScalarOpts
        LLVMLinker
        LLVMIRReader
        LLVMAsmParser
        LLVMInstCombine
        LLVMTransformUtils
        LLVMBitWriter
        LLVMAnalysis
        LLVMProfileData
        LLVMObject
        LLVMMCParser
        LLVMMC
        LLVMBitReader
        LLVMCore
        LLVMBinaryFormat
        LLVMSupport
        LLVMDemangle
        )

# Copy shared dynamic libraries to binary folder
file(COPY
        ${CMAKE_SOURCE_DIR}/Externals/ANTLR/4.7.1/Runtime/lib/libantlr4-runtime.dylib
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/
        )
